--- a/src/page/index/index.pcss
+++ b/src/page/index/index.pcss
@@ -1,7 +1,11 @@
+:root {
+  --homeSize: 50px;
+}
+
 .home {
   @util center;
   flex-wrap: wrap;
-  width: 50px;
+  width: var(--homeSize);
   height: @width;
   font-family: "sans-serif";
 
