:construction: 修正px使其不在进行转换

--- a/src/page/index/index.pcss
+++ b/src/page/index/index.pcss
@@ -1,5 +1,5 @@
 :root {
-  --homeSize: 50px;
+  --homeSize: 50Px;
 }
 
 .home {
@@ -10,7 +10,7 @@
   font-family: "sans-serif";
 
   @mixin sexMode {
-    size: 100px;
+    size: 100Px;
     @util center;
   }
 
@@ -33,7 +33,7 @@ $loveAnimal: Dog, Tiger, Lien;
 
   @each $icon in $loveAnimal {
     .icon$(icon) {
-      size: 100px;
+      size: 100Px;
       background: blue;
       color: white;
     }
