:construction: 增加清理dist文件夹地方.删除lock文件的推送.增加图片推送功能

--- a/src/page/index/index.pcss
+++ b/src/page/index/index.pcss
@@ -2,6 +2,16 @@
   --homeSize: 50Px;
 }
 
+html, body {
+  size: 100%;
+}
+
+:global #root {
+  size: 100%;
+  background: url("./images/login-bg.png") no-repeat 100%;
+  background-size: 100% 100%;
+}
+
 .home {
   @util center;
   flex-wrap: wrap;
